--- a/app/src/main/res/layout/cafe_list_item.xml
+++ b/app/src/main/res/layout/cafe_list_item.xml
@@ -16,6 +16,7 @@
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:padding="2dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <LinearLayout
