--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -323,6 +323,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/modify_button" />
 
             <TextView
+                android:id="@+id/line4"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="#000000"
+                app:layout_constraintEnd_toEndOf="@+id/request_deletion_textView"
+                app:layout_constraintStart_toStartOf="@+id/request_deletion_textView"
+                app:layout_constraintTop_toBottomOf="@+id/request_deletion_textView" />
+
+            <TextView
                 android:id="@+id/email_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
