--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    //android:paddingTop="?attr/actionBarSize">
-    //액션바 없애면서 위에 공간이 남음. 한번 지워봤음
+    //android:paddingTop="?attr/actionBarSize"> //액션바 없애면서 위에 공간이 남음. 한번 지워봤음
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
