--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -25,7 +25,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/profile_image"
+                    android:id="@+id/cafe_image"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="10dp"
