--- a/app/src/main/res/layout/fragment_cafe_delete.xml
+++ b/app/src/main/res/layout/fragment_cafe_delete.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.review.ReviewFragment">
+    tools:context=".ui.Fragment.ReviewFragment">
 
     <Button
         android:id="@+id/backspace_button"
