--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -5,18 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu">
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addCafe_floatingButton"
         android:layout_width="wrap_content"
@@ -24,13 +12,12 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
         android:backgroundTint="#F6921E"
         android:contentDescription="@string/add_cafe"
         android:src="@drawable/add_cafe_flaoting_button"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:rippleColor="@color/white" />
+        app:rippleColor="@color/white"
+        tools:layout_editor_absoluteY="603dp" />
 
     <TextView
         android:id="@+id/line8"
@@ -92,7 +79,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fadeScrollbars="true"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line8">
