--- a/app/src/main/res/layout/fragment_mypage_grade.xml
+++ b/app/src/main/res/layout/fragment_mypage_grade.xml
@@ -128,7 +128,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:text="2등급 원두"
-                android:textColor="#F6921E"
+                android:textColor="@color/orange"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageView23"
@@ -179,7 +179,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:text="1등급 원두"
-                android:textColor="#F6921E"
+                android:textColor="@color/orange"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageView24"
@@ -233,7 +233,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:text="3등급 원두"
-                android:textColor="#F6921E"
+                android:textColor="@color/orange"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageView22"
