--- a/app/src/main/res/layout/fragment_cafe_registration.xml
+++ b/app/src/main/res/layout/fragment_cafe_registration.xml
@@ -154,7 +154,7 @@
                 android:layout_height="27dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/brown_button"
+                android:background="@drawable/edge_square_brown"
                 android:text="중복확인"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
@@ -398,7 +398,7 @@
                 android:layout_height="35dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/brown_button"
+                android:background="@drawable/edge_square_brown"
                 android:text="추가"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -421,7 +421,7 @@
                 android:layout_height="45dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/brown_button"
+                android:background="@drawable/edge_square_brown"
                 android:text="등록하기"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
