--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -209,7 +209,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="80dp"
                 android:layout_marginBottom="15dp"
-                android:background="@drawable/brown_button"
+                android:background="@drawable/edge_square_brown"
                 android:text="작성완료"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
@@ -387,7 +387,7 @@
                 android:layout_height="35dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/brown_button"
+                android:background="@drawable/edge_square_brown"
                 android:text="추가"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -428,7 +428,7 @@
                 android:layout_marginStart="80dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="15dp"
-                android:background="@drawable/brown_button"
+                android:background="@drawable/edge_square_brown"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="코멘터리 >"
