--- a/app/src/main/res/layout/fragment_review_tag.xml
+++ b/app/src/main/res/layout/fragment_review_tag.xml
@@ -61,7 +61,7 @@
         android:layout_width="108dp"
         android:layout_height="45dp"
         android:layout_marginBottom="80dp"
-        android:background="@drawable/brown_button"
+        android:background="@drawable/edge_square_brown"
         android:text="추가하기"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
