--- a/app/src/main/res/layout/fragment_review_comment.xml
+++ b/app/src/main/res/layout/fragment_review_comment.xml
@@ -153,7 +153,7 @@
                 android:layout_height="45dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/brown_button"
+                android:background="@drawable/edge_square_brown"
                 android:text="작성완료"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
